change the name of the impressum.html

--- a/info.html
+++ b/info.html
@@ -43,7 +43,7 @@
         <div class="bottom-menu">
             <a href="./gallery.html"><img src="./logos/gallery.svg" alt="gallery-pictures"></a>
             <a href="./info.html"><img src="./logos/info.svg" alt="Architectural Photography"></a>
-            <a href="./Impressum.html"><img src="./logos/law.svg" alt="Wildlife Photography"> </a>
+            <a href="./impressum.html"><img src="./logos/law.svg" alt="Wildlife Photography"> </a>
         </div>
     </nav>
 <script>
