adding alt elemnt to some pictures

--- a/contact.html
+++ b/contact.html
@@ -42,12 +42,13 @@
             </h1>
         </div>
     </header>
+
     <!-- Navigation bar (Bottom Menu) -->
     <nav>
         <div class="bottom-menu">
             <a href="./gallery.html"><img src="./logos/gallery.svg" alt="gallery-pictures"></a>
             <a href="./info.html"><img src="./logos/info.svg" alt="Guide for Photography"></a>
-            <a href="./impressum.html"><img src="./logos/law.svg" alt="Wildlife Photography"></a>
+            <a href="./impressum.html"><img src="./logos/law.svg" alt="Impressum info"></a>
         </div>
     </nav>
     <!-- Contact Section -->
