--- a/about.html
+++ b/about.html
@@ -39,13 +39,15 @@
         </div>
     </header>
 
-    <!-- Navigation Section (Bottom Menu) -->
+
+    <!-- Navigation bar (Bottom Menu) -->
     <nav>
         <div class="bottom-menu">
             <a href="./gallery.html"><img src="./logos/gallery.svg" alt="gallery-pictures"></a>
-            <a href="./info.html"><img src="./logos/info.svg" alt="Architectural Photography"></a>
-            <a href="./impressum.html"><img src="./logos/law.svg" alt="Wildlife Photography"> </a>
+            <a href="./info.html"><img src="./logos/info.svg" alt="Guide for Photography"></a>
+            <a href="./impressum.html"><img src="./logos/law.svg" alt="Impressum info"></a>
         </div>
+
     </nav>
 
         <div class="content">
