--- a/impressum.html
+++ b/impressum.html
@@ -39,12 +39,12 @@
         </div>
     </header>
 
-    <!-- Navigation Section (Bottom Menu) -->
+    <!-- Navigation bar (Bottom Menu) -->
     <nav>
         <div class="bottom-menu">
             <a href="./gallery.html"><img src="./logos/gallery.svg" alt="gallery-pictures"></a>
-            <a href="./info.html"><img src="./logos/info.svg" alt="Architectural Photography"></a>
-            <a href="./Impressum.html"><img src="./logos/law.svg" alt="Impressum"> </a>
+            <a href="./info.html"><img src="./logos/info.svg" alt="Guide for Photography"></a>
+            <a href="./impressum.html"><img src="./logos/law.svg" alt="Impressum info"></a>
         </div>
     </nav>
 
