comments for impressum

--- a/about.html
+++ b/about.html
@@ -39,7 +39,6 @@
         </div>
     </header>
 
-
     <!-- Navigation bar (Bottom Menu) -->
     <nav>
         <div class="bottom-menu">
@@ -47,15 +46,19 @@
             <a href="./info.html"><img src="./logos/info.svg" alt="Guide for Photography"></a>
             <a href="./impressum.html"><img src="./logos/law.svg" alt="Impressum info"></a>
         </div>
-
     </nav>
-
+    <!-- Main content -->
         <div class="content">
+            <!-- Parent content for the content sections -->
             <div class="content-parent">
+                <!-- Child content for the map -->
                     <div class="content-child child1">
+                        <!-- Google Maps iframe -->
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10771.503294086906!2d7.613337950000001!3d47.550745500000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4791b9cd546318df%3A0x57fb189873713798!2sBreite%2C%20Basel!5e0!3m2!1sen!2sch!4v1696107319508!5m2!1sen!2sch" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
+                    <!-- Second Child content for the about Section-->
                 <div class="content-child child2">
+                    
                 <div class="text-contents">
                 <article>
                     <h2>About Me - 📷 <span>Hobbyist Photographer</span></h2>
