--- a/impressum.html
+++ b/impressum.html
@@ -47,45 +47,46 @@
             <a href="./impressum.html"><img src="./logos/law.svg" alt="Impressum info"></a>
         </div>
     </nav>
-
-<div id="impressum">
-
-    <div class="impressum-info">
-        <div class="impressum-child child1">
-    <h1>Impressum</h1>
+        <!-- Impressum contents -->
+    <div id="impressum">
+        <!-- Main class for Impressum details -->
+        <div class="impressum-info">
+            <!-- Child class for the Impressum contents -->
+            <div class="impressum-child child1">
+                <!--impressum title -->
+                <h1>Impressum</h1>
     
-    <h2>Information according to § 5 TMG (Telemediengesetz):</h2>
+                <h2>Information according to § 5 TMG (Telemediengesetz):</h2>
 
-    <h3>Owner and responsible for the content:</h3>
-    <p>
-        Youssef khouda<br>
-        Lehenmattstrasse 43<br>
-        4052 Basel<br>
-        Switzerland
-    </p>
+                <h3>Owner and responsible for the content:</h3>
+                <p>
+                    Youssef khouda<br>
+                    Lehenmattstrasse <br>
+                    4052 Basel<br>
+                    Switzerland
+                </p>
 
-    <h2>Disclaimer:</h2>
+                <h2>Disclaimer:</h2>
 
-    <h3>Liability for Content:
+                <h3>Liability for Content:
 
-    </h3>
-    <p>
-        The contents of our website were created with utmost care. However, we cannot guarantee the accuracy, completeness, and up-to-date nature of the contents. As a service provider, we are responsible for our own content on this website under the general laws. However, we are under no obligation to monitor third-party information transmitted or stored on our website, nor are we obliged to search for circumstances that might indicate illegal activities.
-    </p>
+                </h3>
+                <p>
+                    The contents of our website were created with utmost care. However, we cannot guarantee the accuracy, completeness, and up-to-date nature of the contents. As a service provider, we are responsible for our own content on this website under the general laws. However, we are under no obligation to monitor third-party information transmitted or stored on our website, nor are we obliged to search for circumstances that might indicate illegal activities.
+                </p>
 
-    <h3>Liability for Links:</h3>
-    <p>
-        Our website may contain links to external websites of third parties. We have no influence over their content. Therefore, we cannot take any responsibility for their content. The provider or operator of the linked sites is always responsible for the content. The linked sites were checked for possible legal violations at the time of linking and no illegal content was identified at that time.
-    </p>
+                <h3>Liability for Links:</h3>
+                <p>
+                    Our website may contain links to external websites of third parties. We have no influence over their content. Therefore, we cannot take any responsibility for their content. The provider or operator of the linked sites is always responsible for the content. The linked sites were checked for possible legal violations at the time of linking and no illegal content was identified at that time.
+                </p>
 
-    <h3>Copyright:</h3>
-    <p class="copyright">
-        The content and works on this website that were created by the website operator are subject to copyright laws. Reproduction, processing, distribution, or any form of commercialization outside the scope of copyright law requires the written consent of the respective author or creator. Downloads and copies of this site are only permitted for private, non-commercial use.
-    </p>
-     </div>
+                <h3>Copyright:</h3>
+                <p class="copyright">
+                    The content and works on this website that were created by the website operator are subject to copyright laws. Reproduction, processing, distribution, or any form of commercialization outside the scope of copyright law requires the written consent of the respective author or creator. Downloads and copies of this site are only permitted for private, non-commercial use.
+                </p>
+            </div>
+        </div>
     </div>
-
-</div>
     <!-- Footer -->
     <footer>
         <div class="footer-title">
