comments + classes names for info.html

--- a/info.html
+++ b/info.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -59,7 +57,7 @@
             </div>
     <div class="content-child child2">
         <div class="table-content">
-            <table border="1" cellpadding="10">
+            <table>
             <thead>
             <tr>
                 <th>Tool</th>
