--- a/info.html
+++ b/info.html
@@ -51,13 +51,20 @@
             <a href="./impressum.html"><img src="./logos/law.svg" alt="Impressum info"></a>
         </div>
     </nav>
+    <!-- Main content container -->
     <div class="content">
+            <!-- Content parent -->
         <div class="content-parent">
+                    <!-- First contact child  -->
             <div class="content-child child1">
+                <!--Background img was added on css file-->
             </div>
+                    <!-- Second contact with table content-->
     <div class="content-child child2">
+            <!-- table contents  -->
         <div class="table-content">
             <table>
+            <!-- Table header -->
             <thead>
             <tr>
                 <th>Tool</th>
@@ -65,6 +72,7 @@
                     <th>Recommendation</th>
                 </tr>
             </thead>
+            <!-- Table Body -->
             <tbody>
                 <tr>
                     <td>Digital Camera</td>
