--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
         <!-- Header title -->
         <div class="page-title">
             <h1>
-                My Picture <span>Gallery</span>
+                My Picture <br><span>Gallery</span>
             </h1>
         </div>
     </header>
