--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,6 @@
             </h1>
         </div>
     </header>
-
     <!-- Navigation bar (Bottom Menu) -->
     <nav>
         <div class="bottom-menu">
@@ -50,15 +49,16 @@
             <a href="./impressum.html"><img src="./logos/law.svg" alt="Impressum info"></a>
         </div>
     </nav>
-
+<!-- wrapper for slide images -->
 <div class="wrapper">
     <div class="wrapper-content">
+        <!-- images contents -->
     <div class="img-content img-display-container">
         <img class="mySlides" src="./images/flower.webp" style="width:100%" alt="Sanguinea">
         <img class="mySlides" src="./images/contact.webp" style="width:100%" alt="Tinguelly museum">
         <img class="mySlides" src="./images/nature.webp" style="width:100%" alt="green park">
         <img class="mySlides" src="./images/collared.webp" style="width:100%" alt="Eastern collared lizard">
-
+        <!--button to show next image-->
         <button class="img-button img-black img-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="img-button img-black img-display-right" onclick="plusDivs(1)">&#10095;</button>
     </div>
