add all css files  to one css

--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
     <!-- Title of the website -->
     <title>Your Photography Website</title>
     <!-- CSS files -->
-    <link rel="stylesheet" href="./css/style-galerie.css">
+    <link rel="stylesheet" href="./css/style.css">
     <!-- Boxicons CSS library for icons -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <!--Fonts from Google Fonts -->
