--- a/impressum.html
+++ b/impressum.html
@@ -6,7 +6,7 @@
     <!-- Title of the website -->
     <title>Your Photography Website</title>
     <!-- CSS files -->
-    <link rel="stylesheet" href="./css/style-impressum.css">
+    <link rel="stylesheet" href="./css/style.css">
     <!-- Boxicons CSS library for icons -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <!--Fonts from Google Fonts -->
@@ -52,7 +52,7 @@
         <!-- Main class for Impressum details -->
         <div class="impressum-info">
             <!-- Child class for the Impressum contents -->
-            <div class="impressum-child child1">
+            <div class="impressum-child child-impressum1">
                 <!--impressum title -->
                 <h1>Impressum</h1>
     
