fix some issues

--- a/info.html
+++ b/info.html
@@ -52,15 +52,15 @@
         </div>
     </nav>
     <!-- Main content container -->
-    <div class="content">
+    <div class="content-info">
             <!-- Content parent -->
-        <div class="content-parent">
+        <div class="content-parent-info">
                     <!-- First contact child  -->
-            <div class="content-child child1">
+            <div class="content-child-info child-info1">
                 <!--Background img was added on css file-->
             </div>
                     <!-- Second contact with table content-->
-    <div class="content-child child2">
+    <div class="content-child-info child-info2">
             <!-- table contents  -->
         <div class="table-content">
             <table>
